# cookiecutter-poc

./: .gitignore  .readthedocs.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml
docs/: Makefile  conf.py  examples.rst  generate_example.sh  http-server.rst  index.rst  installation.rst  payloads.rst  quickstart.rst  requirements.txt  workflows.rst
docs/api/: index.rst  servers.rst  utils.rst
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  Makefile  README.md  UTILS_README.md  pyproject.toml
{{cookiecutter.project_slug}}/payloads/: README.md
{{cookiecutter.project_slug}}/payloads/shells/: cmd.aspx  cmd.jsp  cmd.php
{{cookiecutter.project_slug}}/payloads/xss/: examples.txt  steal-all.js  steal-cookie.js
{{cookiecutter.project_slug}}/payloads/xxe/: examples.md  xxe-template.dtd
{{cookiecutter.project_slug}}/scripts/: bundle.py
{{cookiecutter.project_slug}}/servers/: README.md  server.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: cli.py  exploit.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/utils/: timing.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  exploit.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/servers/: __init__.py  server.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/utils/: apache_hooks.py  batch_request.py  cookie.py  encoding.py  file_upload.py  html_parser.py  network.py  output.py  paths.py  process.py  reverse_shells.py  server_hooks.py  shell_catcher.py  timing.py  xss.py  xxe.py  zip_util.py
